# carddb

./: .clang-tidy  .eslintrc.yml  .gitignore  .gitmodules  CMakeLists.txt  RELEASE_NOTES.md  download.ts  index.ts  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: actions.yml  codeql-analysis.yml  publish.yml
.nix/: flake.nix
emscripten/: pre.js
include/cubeartisan/carddb/: card.hpp
include/cubeartisan/carddb/grammar/: accessors.hpp  grammar.hpp  utils.hpp  values.hpp
src/: emscripten.cpp  test.cpp
types/: cards.ts  fetch.d.ts  scryfall.ts
utils/: convert.ts  download.ts
